--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <meta name="color-scheme" content="light dark" />
   <title>Neue Siedler – Minimal</title>
 
+    <link rel="stylesheet" href="ui/css/ui-start.css">
+  
   <style>
     /* =========================================================================
        [STYLE] Minimal-Layering & Reset
@@ -205,6 +207,8 @@
        - Ersetzt später: ui/ui-start.js, ui/ui-inspector.js
        - Hält sich strikt an Event-Flow (req:/cb:)
   ======================================================================== -->
+    <script src="ui/ui-start.js"></script>
+  
   <script>
   /* ==========================================================================
      [UI-MIN] Konstanten & kleine Helpers
